Fix animation cache regeneration being stuck in the middle of recalculation

The patch for animation cache leak broke normal recalculation:
KisAsyncAnimationCacheRenderer::clearFrameRegenerationState()
resets the state after each frame recalculation, so we should
initialize it manually every time.

BUG:391791