libs/ui/dialogs/KisAsyncAnimationFramesSaveDialog.h
@@ -42,6 +42,8 @@ public:
 protected:
     QList<int> calcDirtyFrames() const override;
     KisAsyncAnimationRendererBase* createRenderer(KisImageSP image) override;
+    void initializeRendererForFrame(KisAsyncAnimationRendererBase *renderer,
+                                    KisImageSP image, int frame) override;
 
 private:
     struct Private;
